--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -260,7 +260,7 @@
 /* About Section */
 .main {
     background: #101522;
-    padding: 10rem 0;
+    padding: 5rem 0;
 }
 
 .main__container {
@@ -280,7 +280,6 @@
     color: #fff;
     width: 100%;
 }
-
 .main__content h1 {
     color: #a9b3c1;
     font-size: 18px;
@@ -359,9 +358,29 @@
     justify-content: center;
     color: #fff;
 }
+.main__img--card img {
+    height: 70%;
+    border-radius: 20px;
+}
 
 .fa-layer-group, .fa-users {
     font-size: 14rem;
+}
+
+/* Responsive */
+
+@media screen and (min-width: 1100px) {
+    .head-1 h1 {
+        display: none;
+    }
+
+    .main__content h1 {
+        color: #a9b3c1;
+        font-size: 18px;
+        line-height: 16px;
+        letter-spacing: 1.4px;
+        margin-bottom: 16px;
+    }
 }
 
 /* Mobile Responsive */
@@ -376,9 +395,28 @@
         height: 90%;
     }
 
+    .head-2 h1 {
+        display: none;
+    }
+
+    .head-1 h1 {
+        color: #a9b3c1;
+        font-size: 18px;
+        line-height: 16px;
+        letter-spacing: 1.4px;
+        margin-bottom: 16px;
+    }
+
     .main__img--container {
         display: flex;
+        flex-direction: column;
         justify-content: center;
+        align-items: center;
+    }
+
+    .main__img--card img {
+        height: 70%;
+        border-radius: 20px;
     }
 
     .main__img--card {
@@ -420,7 +458,6 @@
         font-size: 2rem;
         margin-top: 3rem;
     }
-
     .main__content h2 {
         font-size: 2rem;
     }
@@ -462,7 +499,7 @@
 .services__card {
     position: relative;
     display: flex;
-    max-width: 40%;
+    max-width: 45%;
     align-items: center;
     transition: var(--transit-in);
 }
@@ -480,7 +517,7 @@
     box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.05);
 }
 .service-content {
-    margin: 0 0 1.5rem 0;
+    margin: 0 0 5rem 0;
     height: 100%;
     align-items: center;
     padding-left: 3.5rem;
@@ -513,103 +550,47 @@
     }
 }
 
-/* .services {
-    background: #fff;
+#contact {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
-    height: 100%;
-    padding: 10rem 0;
-}
-
-.services h1 {
-    margin-bottom: 5rem;
-    font-size: 2.5rem;
-}
-
-.services__wrapper {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
-}
-
-.services__card {
-    margin: 10px;
-    height: 425px;
-    width: 300px;
-    border-radius: 4px;
-    display: flex;
     flex-direction: column;
-    justify-content: center;
-    color: #fff;
-    background-image: linear-gradient(to right, #00dbde,#fc00ff 100%);
-    transition: var(--transit-in);
+    padding: 30px 0;
+    background: #e9e7e7f8;
 }
-
-.services__card:nth-child(2) {
-    background: #a80077;  /* fallback for old browsers *
-    background: -webkit-linear-gradient(to right, #66ff00, #a80077);  /* Chrome 10-25, Safari 5.1-6 *
-    background: linear-gradient(to right, #66ff00, #a80077); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ *
-}
-
-.services__card:nth-child(3) {
-    background-image: linear-gradient(
-        -225deg,
-        #231557,
-        #44107a,
-        #ff1361,
-        #fff800
-    );
-}
-
-.services__card h2 {
-    text-align: center;
-}
-
-.services__card p {
-    text-align: center;
-    margin-top: 24px;
-    font-size: 20px;
-}
-
-.services__btn {
-    display: flex;
-    justify-content: center;
-    margin-top: 16px;
-}
-
-.services__card button {
-    color: #fff;
-    padding: 14px 24px;
+.contact__input{
+    width: 100%;
+    font-size:  0.938rem;
+    font-weight: 600;
+    padding: 1rem;
+    border-radius: .5rem;
+    border: 1.5px solid  #0E2431;
+    outline: none;
+    margin-bottom: 2rem;
+    background: #e9e7e7f8;
+  }
+  .contact__button{
+    display: block;
     border: none;
     outline: none;
-    border-radius: 4px;
-    background: #131313;
-    font-size: 1rem;
-}
-
-.services__card button:hover {
+    font-size: 0.938rem;
     cursor: pointer;
+    margin-left: auto;
 }
-
-.services__card:hover {
-    transform: scale(1.075);
-    transition: var(--transit-in);
-    cursor: pointer;
+.section h2 {
+    margin: 2rem 0;
 }
-
-@media screen and (max-width: 1300px) {
-    .services__wrapper {
-        grid-template-columns: 1fr 1fr;
+.contact__button {
+    color: #fff;
+}
+@media screen and (max-width: 960px){
+    .contact__form{
+      width: 360px;
     }
-}
-
-@media screen and (max-width: 768px) {
-    .services__wrapper {
-        grid-template-columns: 1fr;
+    .contact__container{
+      justify-items: center;
     }
-} */
+  }
+
 
 /* Footer */
 .footer__container {
